--- a/index.html
+++ b/index.html
@@ -33,7 +33,7 @@
 
     <ul>
         <li><a href="jtfs_vs_ts.html">Discriminability under Insensitivity: Joint Time Frequency Scattering vs Wavelet Scattering</a></li>
-        <li><a href="shift_invar.html">What is "shift invariance" in wavelet scattering?</a></li>
+        <li><a href="shift_invar_1.html">What is "shift invariance" in wavelet scattering?</a></li>
     </ul>
 
 </body>
